# MoonshotAI-Cookbook

./: README.md
examples/agno/: main.py
examples/auto_reconnect/: main.py
examples/awesome_kimi_prompt/: kimi_assistant.json
examples/context_caching/: journey_to_the_west_bot.py  kimi_api.json  kimi_api.py  tool_use.json  tool_use.py  西游记.txt
examples/context_caching/nodejs/: journey_to_the_west_bot.js  kimi_api.js  tool_use.js
examples/context_caching/python/: journey_to_the_west_bot.py  kimi_api.py  tool_use.py
examples/cpp_demo/: CMakeLists.txt  main.cpp
examples/cpp_demo/openai/: openai.hpp
examples/dotnet_demo/: .gitignore  Program.cs  dotnet_demo.csproj  readme.md
examples/dotnet_sdk/: .gitignore  readmd.md  readme.md
examples/dotnet_sdk/MoonshotClient/: MoonshotClient.cs  MoonshotClient.csproj  MoonshotModel.cs
examples/golang_demo/: client.gen.go  client.go  client_test.go  constants.gen.go  context_cache.go  context_cache_manager.gen.go  dto.go  dto_test.go  generate.sh  generate_models_file.go  go.mod  go.sum  handler.go  main.go  request.go  request_test.go
examples/java_demo/: MoonshotAiUtils.java  Search.java  UploadFile.java  pom.xml
examples/java_demo/src/main/java/cn/moonshot/examples/: HelloWorld.java
examples/java_sdk/: pom.xml
examples/langchain/: main.py
examples/langchaingo/: go.mod  go.sum  main.go
examples/llm_riddles/: README.md  api.py  app.py  requirements.txt
examples/php_demo/: README.md  composer.json  demo.php
examples/ruby_demo/: README.md  app.rb
(+4 files in other folders)
